--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<div class="paddingtext2">
 			<h1>Учні Хогвартса</h1>
 		</div>
-		<img src = "https://i.pinimg.com/736x/48/13/35/48133571661bf029339e0113b5a34cca.jpg">
+		<img src = "https://i.postimg.cc/ZKt9vMgL/39713-1.jpg">
 		<div class="info-box">
 			<p><b>Гаррі Поттер</b> — хлопець із Грифіндору, якого всі впізнають завдяки блискавичному шраму на чолі.</p>
 		</div>
